snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha1
4e603f2521b5f6e5715d04019e54d5b8e9d8d7b5